modify Readme & configure file

--- a/httpd_test.conf
+++ b/httpd_test.conf
@@ -5,7 +5,7 @@
 #--------------------------------------------
 
 home_dir=/var
-ip_addr		=127.0.0.1
+ip_addr		#use the local ip address
 port_no=80
 backlog=8
 
